@@ -2,6 +2,7 @@
 
 namespace App;
 
+use App\OrderItem;
 use App\Product;
 use App\User;
 use Illuminate\Database\Eloquent\Model;
@@ -16,5 +17,10 @@ class Order extends Model
     public function products()
     {
         return $this->belongsToMany(Product::class, 'order_items')->withPivot(['quantity', 'price', 'total']);
+    }
+
+    public function order_items()
+    {
+        return $this->hasMany(OrderItem::class);
     }
 }
