@@ -2,6 +2,7 @@
 
 namespace App;
 
+use App\CommentRating;
 use App\Order;
 use App\Product;
 use Illuminate\Foundation\Auth\User as Authenticatable;
@@ -15,5 +16,9 @@ class User extends Authenticatable
     public function products()
     {
         return $this->belongsToMany(Product::class, 'comment_ratings')->withPivot(['content', 'parent_id', 'rating']);
+    }
+    public function comment_ratings()
+    {
+        return $this->hasMany(CommentRating::class);
     }
 }
